overflow fix

--- a/index.css
+++ b/index.css
@@ -20,6 +20,7 @@
     margin: 0;
     padding: 0;
     box-sizing: inherit;
+    overflow-wrap: break-word;
 }
 @property --angle{
     syntax: '<angle>';
